--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ header {
 }
 
 .mainmenu {
+	text-decoration: none;
 	font-size: 2em;
 	font-family: Impact, sans-serif;
 	font-weight: bold;
@@ -39,4 +40,28 @@ header {
 .mainmenu a:hover {
 	color: #fdf5e6;
 	text-decoration: none;
+}
+
+.gfoot {
+	background-color: green;
+	padding: 10px;
+	font-size: 1.1em;
+	text-decoration: none;
+	color: white;
+	font-family: "Avant Garde", sans-serif;
+	text-align: right;
+}
+
+.gfoot a {
+	padding-right: 10px;
+	padding-left: 5px;
+	border-right: 1px solid white;
+}
+
+.gfoot a:link, a:visited {
+	color: white;
+}
+
+.gfoot a:hover {
+	text-decoration: underline;
 }
