--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 	background-color: #5F6A6A;
 }
 
-form {
+form, .main {
 	background-image: url("images/middlebackground.jpg");
 	background-color: #F2F4F4;
 	padding: 30px;
@@ -64,4 +64,16 @@ header {
 
 .gfoot a:hover {
 	text-decoration: underline;
+}
+
+.main {
+	font-family: Arial, sans-serif;
+	font-size: 1.4em;
+	text-align: center;
+}
+
+.main .btn {
+	font-size: 2em;
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
